--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "name": "",
     "email": ""
   },
-  "repository": "/dd-webdev",
+  "repository": "/data-dancers",
   "scripts": {
     "dev": "vuepress dev src",
     "build": "vuepress build src"
