--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -34,6 +34,8 @@ jobs:
       # run build script
       - name: Build VuePress site
         run: pnpm build
+        env:
+          NODE_OPTIONS: --openssl-legacy-provider
 
       # please check out the docs of the workflow for more details
       # @see https://github.com/crazy-max/ghaction-github-pages
