--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,10 +1,10 @@
 name: docs
 
 on:
-  # trigger deployment on every push to main branch
+  # Trigger deployment on every push to the main branch
   push:
     branches: [master]
-  # trigger deployment manually
+  # Trigger deployment manually
   workflow_dispatch:
 
 jobs:
@@ -14,37 +14,33 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          # fetch all commits to get last updated time or other git log info
+          # Fetch all commits to get last updated time or other git log info
           fetch-depth: 0
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          # choose pnpm version to use
-          version: 8
-          # install deps with pnpm
-          run_install: true
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          # choose node.js version to use
+          # Choose Node.js version to use
           node-version: 20
 
-      # run build script
+      - name: Install dependencies
+        run: yarn install
+
+      # Run build script
       - name: Build VuePress site
-        run: pnpm build
+        run: yarn build
         env:
           NODE_OPTIONS: --openssl-legacy-provider
 
-      # please check out the docs of the workflow for more details
+      # Deploy to GitHub Pages
+      # Please check out the docs of the workflow for more details
       # @see https://github.com/crazy-max/ghaction-github-pages
       - name: Deploy to GitHub Pages
         uses: crazy-max/ghaction-github-pages@v4
         with:
-          # deploy to gh-pages branch
+          # Deploy to gh-pages branch
           target_branch: gh-pages
-          # deploy the default output dir of VuePress
+          # Deploy the default output dir of VuePress
           build_dir: docs/.vuepress/dist
         env:
           # @see https://docs.github.com/en/actions/reference/authentication-in-a-workflow#about-the-github_token-secret
