--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -42,8 +42,7 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: crazy-max/ghaction-github-pages@v4
         with:
-          # Deploy to gh-pages branch
-          target_branch: gh-pages
+          target_branch: master
           # Deploy the default output dir of VuePress
           build_dir: src/.vuepress/dist
         env:
