--- a/.github/workflows/publish-site.yml
+++ b/.github/workflows/publish-site.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: crazy-max/ghaction-github-pages@v4
         with:
-          target_branch: master
+          target_branch: gh-pages
           # Deploy the default output dir of VuePress
           build_dir: src/.vuepress/dist
         env:
