--- a/.github/workflows/publish-site.yml
+++ b/.github/workflows/publish-site.yml
@@ -1,15 +1,15 @@
 name: publish-site
 
 on:
-  # Trigger deployment on every push to the main branch
+  # trigger deployment on every push to main branch
   push:
-    branches: [master]
-  # Trigger deployment manually
+    branches: [main]
+  # trigger deployment manually
   workflow_dispatch:
 
+  
 permissions:
   contents: write  # Add this line to give write permissions to GITHUB_TOKEN
-
 
 jobs:
   docs:
@@ -18,33 +18,38 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          # Fetch all commits to get last updated time or other git log info
+          # fetch all commits to get last updated time or other git log info
           fetch-depth: 0
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          # choose pnpm version to use
+          version: 8
+          # install deps with pnpm
+          run_install: true
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          # Choose Node.js version to use
+          # choose node.js version to use
           node-version: 20
+          # cache deps for pnpm
+          cache: pnpm
 
-      - name: Install dependencies
-        run: yarn install
-
-      # Run build script
+      # run build script
       - name: Build VuePress site
-        run: yarn docs:build
-        env:
-          NODE_OPTIONS: --openssl-legacy-provider
+        run: pnpm docs:build
 
-      # Deploy to GitHub Pages
-      # Please check out the docs of the workflow for more details
+      # please check out the docs of the workflow for more details
       # @see https://github.com/crazy-max/ghaction-github-pages
       - name: Deploy to GitHub Pages
         uses: crazy-max/ghaction-github-pages@v4
         with:
+          # deploy to gh-pages branch
           target_branch: gh-pages
-          # Deploy the default output dir of VuePress
-          build_dir: src/.vuepress/dist
+          # deploy the default output dir of VuePress
+          build_dir: docs/.vuepress/dist
         env:
           # @see https://docs.github.com/en/actions/reference/authentication-in-a-workflow#about-the-github_token-secret
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
