--- a/hugo.toml
+++ b/hugo.toml
@@ -22,7 +22,7 @@ enableRobotsTXT = true
   favicon = "/images/favicon.ico"
   site_logo = ""
   description = "HERE: DD"
-  background_color_class = "bg-black"
+  background_color_class = "bg-transparent"
   recent_posts_number = 3
 
 [[params.ananke_socials]]
