--- a/hugo.toml
+++ b/hugo.toml
@@ -17,7 +17,7 @@ enableRobotsTXT = true
   filename = "sitemap.xml"
 
 [params]
-  text_color = ""
+  text_color = "near-white"
   author = ""
   favicon = "/images/favicon.ico"
   site_logo = ""
