Update discord URL

--- a/hugo.toml
+++ b/hugo.toml
@@ -21,7 +21,7 @@ enableRobotsTXT = true
     name = "Discord"
     weight = 5
     identifier = "discord"
-    url = "https://discord.gg/xs5ztf6THf"
+    url = "https://discord.gg/xbvw77Jvt2"
 
 # All menu items defined this way will link externally -> new tab
 
